	(tinydebian-debian-parse-bts-bug-maintainer): Use
	`tinydebian-decode-html'.'.
	(tinydebian-debian-parse-bts-bug-reported-by): Use
	`tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-bug-title): Use `tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-bug-package): Use `tinydebian-decode-html'.
	Treat src:<package> correctly.
	(tinydebian-decode-hex): Add A-F range.

2010-05-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-browse-url-run): Remve typo;
	variable "a".
	(tinydebian-move-point-to-free-place): New.
	(tinydebian-bts-mail-ask-bug-number): Add `save-excursion'.
	(tinydebian-command-show-rc-alert): Call
	`turn-on-tinydebian-bts-mode'.

2010-05-06 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el ()
	(tinydebian-bug-browse-url-main-interactive): Add `save-excursion'.
	(tinydebian-browse-url-basic): New.
	(tinydebian-bug-browse-url-run): Use
	`tinydebian-browse-url-basic'
	(tinydebian-browse-url-http-get): New.
	(tinydebian-decode-hex): New.
	(tinydebian-debian-parse-bts-bug-subject): New.
	(tinydebian-debian-url-bug-initialize): New.
	(tinydebian-debian-parse-bts-bug-field): devel New.
	(tinydebian-debian-parse-bts-bug-date-iso): New.
	(tinydebian-debian-parse-bts-search): New.
	(tinydebian-date-to-iso8691): New.
	(tinydebian-debian-parse-bts-search-tag): New.
	(tinydebian-debian-parse-bts-bug-info): New.
	(tinydebian-debian-parse-bts-bug-p): New.
	(tinydebian-debian-url-with): New.
	(tinydebian-debian-url-bug-initialize-p): New.
	(tinydebian-debian-url-bug-info): New.
	(tinydebian-:buffer-http-get): New.
	(tinydebian-debian-bug-info-all-insert): New user
	command in mail mode 'ii'.
	(tinydebian-debian-bug-info-subject-insert): New user
	command in mail mode 'is'.
	(tinydebian-debian-bug-info-macro): New.

2010-05-02 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-call-process): Set
	`default-directory'.
	(tinydebian-:buffer-rc-alert): New.